Bug 132238, add back support for SGML short comment and other junk even in strict comment parsing. r=harishd, sr=jst, a=asa.